--- a/style.css
+++ b/style.css
@@ -1,3 +1,102 @@
-#timer {
-    float: right;
+body {
+    background: black;
+    color: white;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+section {
+    width: 50%; 
+    padding-top: 20px;  
+    margin: auto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+table {
+	font-family: verdana,arial,sans-serif;
+	color:#333333;
+	font-size:14px;
+	border-width: 2px;
+	border-color:grey;
+    border-collapse: collapse;
+    margin-bottom: 8px; 
+}
+
+table th {
+	border-width: 2px;
+	padding: 5px 20px 5px 20px;
+	border-style: solid;
+	border-color: grey;
+	background-color: #dedede;
+}
+
+table td {
+	border-width: 2px;
+	padding: 5px 20px 5px 20px;
+	border-style: solid;
+	border-color: grey;
+    background-color: #ffffff;
+
+}
+
+.hidden {
+    display: none; 
+} 
+.btn {
+    background-color: #708D81; 
+    border: none;
+    width: 100%; 
+    margin-bottom: 10px;
+}
+
+.buttons {
+    border-radius: 25px;
+    background: yellow;
+    border-color: black;
+    color: black;
+    padding: 8px;
+}
+
+.answer-buttons {
+    border-radius: 10px;
+    background: yellow;
+    border-color: black;
+}
+
+#submit-scores, #start-over, #clear-scores {
+    width: 35%; 
+    margin-bottom: 10px; 
+}
+
+#welcomeContent {
+    text-align: center; 
+}
+
+#scoreboardDiv {
+    position: absolute; 
+    top: 0%; 
+    left: 0%; 
+    margin-left: 10px; 
+    margin-top: 20px;
+}
+
+#timer-div {
+    position: absolute; 
+    top: 0%; 
+    right: 0%; 
+    margin-right: 10px; 
+    margin-top: 20px;
+}
+
+#scoreboardLink{
+    margin-left: 10px;
+}
+
+#scoreboardLink, #timerP {
+    background: yellow;
+    color: black;
+    padding: 3px;
+    border-radius: 10px;
 }
